[project]
name = "ke2daira"
version = "0.2.0"
description = "A Python implementaion of ke2daira"
authors = [
    { name = "otariidae", email = "otariidae@users.noreply.github.com" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Janome>=0.4.1,<1.0.0"
]

[project.urls]
homepage = "https://github.com/otariidae/ke2daira.py"
repository = "https://github.com/otariidae/ke2daira.py"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
black = "^25.1"
mypy = "^1.16"
ruff = "^0.0.284"

[tool.mypy]
strict = true

[tool.ruff]
select = ["ALL"]
ignore = ["D"]
target-version = "py39"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
