[project]
name = "ke2daira"
version = "0.2.2"
description = "A Python implementaion of ke2daira"
authors = [
    { name = "otariidae", email = "otariidae@users.noreply.github.com" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "janome (>=0.5.0,<0.6.0)"
]

[project.urls]
homepage = "https://github.com/otariidae/ke2daira.py"
repository = "https://github.com/otariidae/ke2daira.py"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
mypy = "^1.20.1"
ruff = "^0.15.11"

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]

[tool.poetry]
requires-poetry = ">=2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
